Project

General

Profile

Actions

Bug #19501

closed

C_MDSInternalNoop::complete doesn't free itself

Added by Zheng Yan about 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken, jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This cause memory leak


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #19664: kraken: C_MDSInternalNoop::complete doesn't free itselfResolvedNathan CutlerActions
Copied to CephFS - Backport #19665: jewel: C_MDSInternalNoop::complete doesn't free itselfResolvedNathan CutlerActions
Actions #1

Updated by Zheng Yan about 7 years ago

  • Status changed from New to 12
  • Backport set to kraken, jewel
Actions #2

Updated by Zheng Yan about 7 years ago

  • Status changed from 12 to Fix Under Review
Actions #3

Updated by John Spray about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19664: kraken: C_MDSInternalNoop::complete doesn't free itself added
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19665: jewel: C_MDSInternalNoop::complete doesn't free itself added
Actions #6

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF