mds: make C_MDSInternalNoop::complete() delete 'this'

Fixes: http://tracker.ceph.com/issues/19501
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit 424e0c6744e7f63459ca0ff7deab751726aa30cd)

Conflicts:
        src/mds/MDSContext.h (omit "override" because jewel does not have
        1a91aeab987870b3ccbcf2f1e476fac8b534d449)